--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ default-run = "default"
 name = "default"
 path = "src/main.rs"
 
+[[bin]]
+name = "fast"
+path = "src/main_fast.rs"
+
 [dependencies]
 reqwest = { version = "0.11.13", features = ["blocking"] }
 proc_macro_aoc = { path = "proc_macro_aoc" }
